Fix jumping modified indicator

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -44,8 +44,8 @@
 
         &.modified:not(:hover) .close-icon {
             right: @component-padding + 4;
-            top: ~'calc(50% + .125em)';
-            transform: translateY(-50%);
+            top: ~'calc(50% - .135em)';
+            transform: scale(1);
             width: @modified-icon-width;
             height: @modified-icon-width;
             border-color: @text-color;
